--- a/GolfClub/BlazorApp/Pages/Equipment/AddEquipment.razor.css
+++ b/GolfClub/BlazorApp/Pages/Equipment/AddEquipment.razor.css
@@ -39,3 +39,25 @@
 .update-form label.error {
     color: red;
 }
+
+.createEquipmentButton{
+    background-color: greenyellow;
+    width: 150px;
+    height: 50px;
+    font-size: medium;
+    border-radius: 10px;
+}
+
+.message {
+    display: block;
+    font-weight: bold;
+    color: green;
+    margin-bottom: 10px;
+}
+
+.error {
+    display: block;
+    font-weight: bold;
+    color: red;
+    margin-bottom: 10px;
+}
