--- a/GolfClub/BlazorApp/Pages/Equipment/ManageEquipment.razor.css
+++ b/GolfClub/BlazorApp/Pages/Equipment/ManageEquipment.razor.css
@@ -1,11 +1,10 @@
-.funnel{
-    width:30px;
-    height:30px;
+.funnel {
+    width: 30px;
+    height: 30px;
     cursor: pointer;
 }
 
-.addNewButton{
-
+.addNewButton {
     background-color: greenyellow;
     width: 150px;
     height: 50px;
@@ -40,6 +39,7 @@
     border: 1px solid #ddd;
     padding: 10px;
 }
+
 .update-form .form-group {
     margin-bottom: 10px;
 }
@@ -56,6 +56,7 @@
     border-radius: 4px;
     cursor: pointer;
 }
+
 .update-form .createEquipmentButton:hover {
     background-color: #45a049;
 }
@@ -63,12 +64,14 @@
 .update-form label.error {
     color: red;
 }
+
 .headline_box {
     display: flex;
     justify-content: left;
     margin-bottom: 20px;
     margin-top: 15px;
 }
+
 .headline {
     color: green;
     margin-left: 5px;
@@ -79,4 +82,19 @@
     width: 40px;
     height: 40px;
     margin-top: -5px;
+}
+
+
+.message {
+    display: block;
+    font-weight: bold;
+    color: green;
+    margin-bottom: 10px;
+}
+
+.error {
+    display: block;
+    font-weight: bold;
+    color: red;
+    margin-bottom: 10px;
 }
