--- a/GolfClub/BlazorApp/Shared/NavMenu.razor
+++ b/GolfClub/BlazorApp/Shared/NavMenu.razor
@@ -18,11 +18,6 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="RentEquipment">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Rent Equipment
-                </NavLink>
-            </div>
-            <div class="nav-item px-3">
                 <NavLink class="nav-link" href="SeeStatistics">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> See Statistics
                 </NavLink>
@@ -34,11 +29,6 @@
             </div>
         </AuthorizeView>
         <AuthorizeView Policy="MustBeEmployee">
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="SeeStatistics">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> See Statistics
-                </NavLink>
-            </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="CreateGame">
                     <span class="oi oi-plus" aria-hidden="true"></span> Create Game
@@ -52,6 +42,11 @@
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="ManageEquipment">
                     <span class="oi oi-list" aria-hidden="true"></span> Manage Equipment
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="RentEquipmentsForGame">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Rent Equipment
                 </NavLink>
             </div>
             <div class="nav-item px-3">
