--- a/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/SpecificTournament.razor
+++ b/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/SpecificTournament.razor
@@ -60,6 +60,7 @@ else
     private ICollection<User> allPlayers = new List<User>();
     private string msg;
 
+    //Method that runs upon loading the page
     protected override async Task OnInitializedAsync()
     {
         try
@@ -77,17 +78,20 @@ else
         }
     }
 
+    //changes the boolean that controls showing the deleting tournament part
     private void SwitchDeleteBool()
     {
         delete = !delete;
     }
 
+    //Method that deletes the tournament
     private async void DeleteTournament()
     {
        await TournamentService.DeleteTournamentAsync(tournamentName);
         navMgr.NavigateTo($"/ManageTournament");
     }
 
+    //Method that registers a player to the current tournament
     private async Task AddPlayer()
     {
         if (string.IsNullOrEmpty(chosenPlayerName)||chosenPlayerName.Equals("choose:"))
@@ -107,6 +111,7 @@ else
         }
     }
 
+    //Method that sets the currently selected player variable in the dropdown list
     private void SetSelectedPlayer(ChangeEventArgs e)
     {
         if (!string.IsNullOrEmpty(e.Value.ToString()))
